# hugginggface_daily_paper

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
data/daily/: 2026-01-01.json  2026-01-02.json  2026-01-03.json  2026-01-04.json  2026-01-05.json  2026-01-06.json  2026-01-07.json  2026-01-08.json  2026-01-09.json  2026-01-10.json  2026-01-11.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  (+29 more)
data/tags/: institution_aliases.json  institutions.json  tag_overrides.json  topic_aliases.json  topics.json
hf_daily/: __init__.py  admin_server.py  cli.py  fetcher.py  generator.py  llm.py  normalize.py  site_builder.py  storage.py  tags.py
hf_daily/default_static/: app.js  styles.css
hf_daily/default_templates/: daily.html  index.html  matrix.html  paper_card.html
site/: topics.html
site/assets/: styles.css
site/daily/: 2026-01-01.html  2026-01-02.html  2026-01-05.html  2026-01-06.html  2026-04-01.html  2026-04-02.html  2026-04-03.html  2026-04-06.html  (+38 more)
templates/: topics.html
tests/: test_admin_server.py  test_cli.py  test_generate.py  test_llm_prompt.py  test_normalize.py  test_site_builder.py
(+6 files in other folders)
